testsuite/tests/parser/should_fail/T8501a.stderr

T8501a.hs:5:3: error:
    Parse error in pattern: rec
    Perhaps you intended to use RecursiveDo
